--- a/package.json
+++ b/package.json
@@ -5,7 +5,9 @@
   "type": "module",
   "scripts": {
     "dev": "vite",
-    "build": "vite build",
+  "build": "vite build",
+  "typecheck": "npx tsc --noEmit",
+  "prebuild": "npm run typecheck",
     "build:dev": "vite build --mode development",
     "lint": "eslint .",
     "preview": "vite preview"
